--- a/apps/Apps/common/index.html
+++ b/apps/Apps/common/index.html
@@ -1,93 +1,60 @@
 <!doctype html>
 
-<html lang="en" ng-app="Apps" ng-controller="PhoneListCtrl">
+<html lang="en" ng-app="Apps.app" ng-controller="PhoneListCtrl">
 <head>
   <meta charset="utf-8">
   <title ng-bind-template="Running query: {{query}}">Test Angular - My HTML File...</title>
 
   <!-- link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" -->
   <!-- link rel="stylesheet" href="css/app.css" -->
-
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="shared/app/data/data.controller.js"></script>
 </head>
 
 <body>
 
-  <p>Dynamic way to show the cellphones:</p>
-  <p>Hello, {{name}}!</p>
-  <ul>
-    <li ng-repeat="phone in phones">
-      <span>{{phone.name}}</span>
-      <p>{{phone.snippet}}</p>
-    </li>
-  </ul>
-  
-  <p>Total number of phones: {{phones.length}}</p>
-  
-  <table>
-    <tr>
-      <th ng-repeat="j in [0, 1, 2, 3, 4, 5, 6, 7]">row number 0 {{j+1}}</th>
-    </tr>
-    <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]">
-      <td ng-repeat="j in [0, 1, 2, 3, 4, 5, 6, 7]">{{i+1}}, {{j+1}}</td>
-    </tr>
-  </table>
-  
-  
+    <p>Dynamic way to show the cellphones:</p>
+
+    <p>Total number of phones: {{phones.length}}</p>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-2">
-          <!--Sidebar content-->
+        <div class="row">
+            <div class="col-md-2">
+                <!--Sidebar content-->
 
-          Search: <input ng-model="query">
+                Search: <input ng-model="query">
+                Sort by:
+                <select ng-model="orderProp">
+                    <option value="name">Alphabetical</option>
+                    <option value="age">Newest</option>
+                    <option value="-age">Oldest</option>
+                </select>
+          </div>
+          <div class="col-md-10">
+              <p>Query: {{query}}</p> 
+              <!--Body content-->
 
+              <ul class="phones">
+                  <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
+                      <span>{{phone.name}}</span>
+                      <p>{{phone.snippet}}</p>
+                  </li>
+              </ul>
+          </div>
         </div>
-        <div class="col-md-10">
-          <p>Query: {{query}}</p> 
-          <!--Body content-->
+      </div>  
+  
+      <pre>{{phones | filter:query | orderBy:orderProp | json}}</pre>
+      
+      
+      <!-- //////////////// Include vendor JavaScript file(s) //////////////////// -->
 
-          <ul class="phones">
-            <li ng-repeat="phone in phones | filter:query">
-              {{phone.name}}
-              <p>{{phone.snippet}}</p>
-            </li>
-          </ul>
+      <!-- build:js(.) shared/vendor.js -->
+      <!-- bower:js -->
+      <script src="../bower_components/angular/angular.js"></script>
 
-        </div>
-      </div>
-    </div>  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  <p>Test expressions:</p>
-  <p>Nothing here {{'yet' + '!'}}</p>
-  <p>1 + 2 = {{ 1 + 2 }}</p>
- 
-  <p>Static way to show the cellphones:</p> 
-  <ul>
-  <li>
-    <span>Nexus S</span>
-    <p>
-      Fast just got faster with Nexus S.
-    </p>
-  </li>
-  <li>
-    <span>Motorola XOOM™ with Wi-Fi</span>
-    <p>
-      The Next, Next Generation tablet.
-    </p>
-  </li>
-  </ul>
-  <p>Total number of phones: 2</p>
-
+      <!-- //////////////// Include application JavaScript file(s) //////////////////// -->
+      <!-- build:js({.tmp,app}) app.js -->
+      <!-- ::::: Modules ::::: -->
+      <script src="shared/app/app.module.js"></script>
+      <script src="shared/app/data/data.module.js"></script> 
+      <script src="shared/app/data/data.controller.js"></script>
 </body>
 </html>
