--- a/src/Apps/index.html
+++ b/src/Apps/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <p>Hello {{name}}</p>
     <p>Dynamic way to show the cellphones:</p>
 
     <p>Total number of phones: {{phones.length}}</p>
