Until Ctrlrs are correct...
Until Ctrlrs are correct...

--- a/apps/Apps/common/index.html
+++ b/apps/Apps/common/index.html
@@ -9,8 +9,8 @@
   <!-- link rel="stylesheet" href="css/app.css" -->
 </head>
 
-<!-- body ng-app="Apps.app" ng-controller="PhoneListCtrl" -->
-<body ng-app="Apps.app">
+<body ng-app="Apps.app" ng-controller="PhoneListCtrl">
+<!-- body ng-app="Apps.app" -->
 
     <p>Hello {{name}}</p>
     <p>Dynamic way to show the cellphones:</p>
