--- a/apps/Apps/common/shared/app/data/list.html
+++ b/apps/Apps/common/shared/app/data/list.html
@@ -1,3 +1,8 @@
+<p>Hello {{name}}</p>
+<p>Dynamic way to show the cellphones:</p>
+
+<p>Total number of phones: {{phones.length}}</p>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-2">
@@ -24,4 +29,4 @@
           </ul>
       </div>
     </div>
-</div>  
+</div>
