--- a/src/Apps/index.html
+++ b/src/Apps/index.html
@@ -9,8 +9,9 @@
   <!-- link rel="stylesheet" href="css/app.css" -->
 </head>
 
-<body ng-app="Apps.app" ng-controller="PhoneListCtrl">
-<!-- body ng-app="Apps.app" -->
+<!-- body ng-app="Apps.app" ng-controller="PhoneListCtrl" -->
+<!-- // Working now; can use without the ng-controller directive: -->
+<body ng-app="Apps.app">
 
     <!-- Application content here -->
     <!-- div ng-view-->
