--- a/src/Apps/index.html
+++ b/src/Apps/index.html
@@ -13,6 +13,8 @@
 <!-- // Working now; can use without the ng-controller directive: -->
 <body ng-app="Apps.app">
 
+    <h1>Angular Test WebApp</h1>
+    
     <!-- Application content here -->
     <!-- div ng-view-->
     <div ui-view>
@@ -39,6 +41,7 @@
     <script src="shared/app/utils/logger/logger.module.js"></script>
     <script src="shared/app/utils/router/router.module.js"></script>
     
+    <!-- ::::: Others... ::::: -->
     <script src="shared/app/utils/logger/logger.js"></script>
     <script src="shared/app/utils/router/route-helper.provider.js"></script>
     <script src="shared/app/data/data.route.js"></script>
